# c-template

./: .gitignore  CMakeLists.txt  README.md
include/: util.h
src/: CMakeLists.txt  main.c  util.c
tests/: CMakeLists.txt  mapreduce_tests.cpp  template_project_tests.cpp
